Updates to game page - Removed extra space in summary section - Now resets state variables when gameId changes; this fixed an issue where the loader would not appear when navigating from one game page to another - Added 'data not found' elements to genres and themes sections

--- a/client/src/styles/game.css
+++ b/client/src/styles/game.css
@@ -7,7 +7,7 @@
 
 /* Additional stylings for loader element */
 .game-page-loader:after {
-  margin-top: 220px;
+  margin-top: 50px;
   border-width: 13px;
   width: 90px;
   height: 90px;
