--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -38,6 +38,7 @@ body {
 .loader {
   display: flex;
   justify-content: center;
+  margin-top: 150px;
 }
 
 .loader--hidden {
